swen430as1/tests/invalid/real/Real_Invalid_10.while
int max(int x, int y) {
    if(x >= y) {
	return x;
    } else {
	return y;
    }
}

void main() {
    assert max(1.0,2.0) == 2;
}
